--- a/subprojects/libcurl/meson.build
+++ b/subprojects/libcurl/meson.build
@@ -8,6 +8,7 @@ subproj_opts.add_cmake_defines({
 	'BUILD_CURL_EXE': false,
 	'BUILD_SHARED_LIBS': false,
 	'BUILD_TESTING': false,
+	'CURL_BROTLI': true,
 	'CURL_USE_LIBSSH': false,
 	'CURL_USE_LIBSSH2': false,
 	'CURL_LTO': get_option('b_lto'),
@@ -22,6 +23,7 @@ subproj_opts.add_cmake_defines({
 	'ENABLE_UNIX_SOCKETS': false,
 	'HTTP_ONLY': true,
 	'SSL_ENABLED': true,
+	'ARCOLLECT_CMAKE_MODULE_PATH': get_option('cmake_module_path'),
 	'CMAKE_MODULE_PATH': get_option('cmake_module_path')
 })
 dep_curl = []
@@ -41,4 +43,4 @@ endif
 subproj_opts.set_install(false)
 subproj_curl = cmake.subproject('libcurl-cmake', options: subproj_opts)
 dep_curl_cmake = subproj_curl.dependency('libcurl')
-meson.override_dependency('libcurl',declare_dependency(dependencies: [dep_curl_cmake,dep_curl,dependency('zlib')], version: '7.81.0'))
+meson.override_dependency('libcurl',declare_dependency(dependencies: [dep_curl_cmake,dep_curl,dependency('zlib'),dependency('libbrotlidec')], version: '7.81.0'))
