[desktop-app] Minimal FontConfig support
	This is a WIP not functionally equivalent.

--- a/desktop-app/xdg/meson.build
+++ b/desktop-app/xdg/meson.build
@@ -59,3 +59,5 @@ if appstreamcli_prog.found()
 endif
 
 main_cpp = 'main-xdg.cpp'
+query_font = 'xdg/font.cpp'
+deskapp_deps += [dependency('fontconfig')]
