Updated to SQLite 3.38.5

--- a/subprojects/packagefiles/sqlite/meson.build
+++ b/subprojects/packagefiles/sqlite/meson.build
@@ -9,6 +9,7 @@ m_dep = cc.find_library('m', required: false)
 sqlite_args = [
 	'-DSQLITE_DEFAULT_FILE_PERMISSIONS=0600',
 	'-DSQLITE_DEFAULT_MEMSTATUS=0',
+	'-DSQLITE_DQS=0',
 	'-DSQLITE_LIKE_DOESNT_MATCH_BLOBS',
 	'-DSQLITE_MAX_EXPR_DEPTH=0',
 	'-DSQLITE_OMIT_AUTHORIZATION',
@@ -24,11 +25,13 @@ sqlite_args = [
 	'-DSQLITE_OMIT_DEPRECATED',
 	'-DSQLITE_OMIT_DESERIALIZE',
 	'-DSQLITE_OMIT_EXPLAIN',
+	'-DSQLITE_OMIT_GENERATED_COLUMNS',
 	'-DSQLITE_OMIT_GET_TABLE',
 	'-DSQLITE_OMIT_HEX_INTEGER',
 	'-DSQLITE_OMIT_INCRBLOB',
 	'-DSQLITE_OMIT_INTEGRITY_CHECK',
 	'-DSQLITE_OMIT_INTROSPECTION_PRAGMAS',
+	'-DSQLITE_OMIT_JSON',
 	'-DSQLITE_OMIT_LOAD_EXTENSION',
 	'-DSQLITE_OMIT_LOCALTIME',
 	'-DSQLITE_OMIT_MEMORYDB',
