[webext-adder tests] Added Pixiv test-set

--- a/webext-adder/tests/meson.build
+++ b/webext-adder/tests/meson.build
@@ -5,6 +5,7 @@ online_tests = files(
 	'e621.net.json',
 	'furaffinity.net.json',
 	'knowyourmeme.com.json',
+	'pixiv.net.json',
 	'tumbex.com.json',
 )
 online_nsfw_tests = files(
