[desktop-app] Added a "this object" menu item (Arcollect::gui::menu_db_object_item)
	Now artists are joining the menus

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -30,6 +30,7 @@ deskapp_srcs = [
 	'gui/font.cpp',
 	'gui/main.cpp',
 	'gui/menu.cpp',
+	'gui/menu-db-object.cpp',
 	'gui/modal.cpp',
 	'gui/rating-selector.cpp',
 	'gui/scrolling-text.cpp',
